
* SOLR-1627 : VariableResolver should be fetched just in time (noble)

* SOLR-1583 : Create DataSources that return InputStream (noble)

* SOLR-1358 : Integration of Tika and DataImportHandler ( Akshay Ukey, noble)

* SOLR-1654 : TikaEntityProcessor example added DIHExample (Akshay Ukey via noble)


Optimizations
----------------------

Bug Fixes
----------------------
* SOLR-1638: Fixed NullPointerException during import if uniqueKey is not specified
  in schema (Akshay Ukey via shalin)

* SOLR-1639: Fixed misleading error message when dataimport.properties is not writable (shalin)

* SOLR-1598: Reader used in PlainTextEntityProcessor is not explicitly closed (Sascha Szott via noble)

Other Changes
----------------------


Build
----------------------


Documentation
----------------------

================== Release 1.4.0 ==================

Upgrading from Solr 1.3
-----------------------

Evaluator API has been changed in a non back-compatible way. Users who have developed custom Evaluators will need
to change their code according to the new API for it to work. See SOLR-996 for details.

The formatDate evaluator's syntax has been changed. The new syntax is formatDate(<variable>, '<format_string>').
For example, formatDate(x.date, 'yyyy-MM-dd'). In the old syntax, the date string was written without a single-quotes.
The old syntax has been deprecated and will be removed in 1.5, until then, using the old syntax will log a warning.

The Context API has been changed in a non back-compatible way. In particular, the Context.currentProcess() method
now returns a String describing the type of the current import process instead of an int. Similarily, the public
constants in Context viz. FULL_DUMP, DELTA_DUMP and FIND_DELTA are changed to a String type. See SOLR-969 for details.

The EntityProcessor API has been simplified by moving logic for applying transformers and handling multi-row outputs